# ml4vfx

./: .gitignore  OS_Playlist.txt  README.md  a_star_scene.hipnc  datastructures.py  environment.yml  genAssetPts.h  gen_maze.h  hdaCallback.py  mazeSolver.py  pyproject.toml  sanity_check.py  solver.py  sop_suhail.maze_solver.1.0.hdanc  sync_upstream.sh
.backup/: a_star_scene_bak1.hipnc  a_star_scene_bak2.hipnc  a_star_scene_bak3.hipnc  a_star_scene_bak4.hipnc  a_star_scene_bak5.hipnc  a_star_scene_bak6.hipnc
a_star/: a_start_test001.hip
api/: main.py
assetQC/: assetQC.ipynb
blender_data/: all_frames_normalized.npy  blender_anim_data_extraction.py  blender_apply_predictions.py  bone_names.npy  normalization_params.npy  predict_future_frames.py  predicted_future_frames.json  prepare_data.py  rnn_model.py
data_viz/: matplotlib_data.ipynb
depth_estimation/: depth_estimation_model.pth  model_build.py  model_inference.py  prepare_data.py
docker/: Dockerfile  docker-compose.yml
dqn/: acrobot_rl_dev.py  infer_acro.py  train_acro.py
fastapi/: server.py
foxes_dogs/: X.pkl  create_training_data.py  model_training.py  y.pkl
gen_ai/: gan_mnist.ipynb
hda/: fashion_mnist.hipnc  gridims.h  predictor.py  pythonsop.py  sop_suhail.fashionMNIST.1.0.hdanc
jax/: jax_intro.ipynb
mediapipe/: face_detection.py  face_mesh.py  face_mesh_data_extraction.py  houdini_python_face_point_data.py
mnist/: TorchMNIST.ipynb
node_sequence/: node_networks.py  node_seq.txt  tensorflow_seq_prediction.py
notebook/: fashionMNIST.ipynb  fashion_mnist.pth  houConnect.ipynb
(+108 files in other folders)
