[project]
name = "bookslib"
version = "0.1.0"
description = ""
authors = [
    {name = "Suhail",email = "suhailece@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry.scripts]
bookslib-demo = "bookslib.__main__:main"

[tool.poetry]
packages = [{include = "bookslib", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
